CHANNGES IN VERSION (1.18.2 & 1.19.2)
-------------------------------------

  o Removed test failing with ggplot2 v4.0.0.

CHANGES IN VERSION (1.19.1)
--------------------------

  o Fixed UMI4C2dds so it does not overwritte the "design" parameter
  o Updated zscoreUMI4C() to be able to deal with design = ~ 1
  o Update all pipes to be the native ones in R (|>) and thus, now R >= 4.1.0

CHANGES IN VERSION (1.9.1)
--------------------------

  o Fixed error with stringr not accepting DNAString as input (prepUMI4C 
    function).


CHANGES IN VERSION (1.3.1)
--------------------------

  o Updated CITATIOn with the published UMI4Cats paper.

CHANGES IN VERSION (1.1.10)
--------------------------

  o The vignette is updated with new examples showing the functionalities added
    in this new package version.
  o Fixed bug when bait is in the reverse strand and `sel_seqname` is set in 
    `getViewpointCoordinates()` (see issue #9).
  o Added function for plotting detected interactions with `callInteractions()`:
    `plotInteractions()` and `plotInteractionsUMI4C()`.
  o Added method for detecting significant interactions with the viewpoint using
    z-scores (`callInteractions()` and `getSignInteractions()`).
  o Added a function for combining restriction fragments that overlap a set of 
    query_regions (`combineUMI4C()`).
  o Create function for generating windows including a fixed number of fragments,
    allowing the use of sliding windows (`makeWindowFragments()`).
  o Added waldUMI4C() function for performing standard DESeq2 differential test 
    from raw UMIs. It allows providing `query_regions` for performing the test
    and summarizing the UMIs in the region by overlap (test each restriction
    fragment separately) or sum (sum UMIs from restriction fragments overlapping
    query regions).
    

CHANGES IN VERSION 1.1.9
--------------------------

  o Allow selection of number of reads to load from FastQ file in prep and split