@@ -55,7 +55,6 @@ import(GenomicRanges)
 import(SummarizedExperiment)
 import(magick)
 import(methods)
-import(org.Hs.eg.db)
 importFrom(rlang,.data)
 importFrom(stats,as.formula)
 importFrom(stats,formula)
