@@ -7,6 +7,7 @@
 createGeneAnnotation(
   window,
   TxDb = TxDb.Hsapiens.UCSC.hg19.knownGene::TxDb.Hsapiens.UCSC.hg19.knownGene,
+  OrgDb = "org.Hs.eg.db",
   longest = TRUE
 )
 }
@@ -15,6 +16,9 @@ createGeneAnnotation(
 selecting the genes to plot.}
 
 \item{TxDb}{TxDb object to use for drawing the genomic annotation.}
+
+\item{OrgDb}{A character string for the name of an annotation element of an
+annotation data package.}
 
 \item{longest}{Logical indicating whether to plot only the longest
 transcripts for each gene in the gene annotation plot.}
@@ -30,6 +34,7 @@ library(TxDb.Hsapiens.UCSC.hg19.knownGene)
 window <- GRanges("chr16:11298262-11400036")
 gene_anno <- createGeneAnnotation(
     window = window,
-    TxDb = TxDb.Hsapiens.UCSC.hg19.knownGene
+    TxDb = TxDb.Hsapiens.UCSC.hg19.knownGene,
+    OrgDb = "org.Hs.eg"
 )
 }
