@@ -539,6 +539,7 @@ In case you are interested in plotting the profiles of the different samples con
 plotUMI4C(umi,
     grouping = NULL,
     TxDb = TxDb.Hsapiens.UCSC.hg19.knownGene::TxDb.Hsapiens.UCSC.hg19.knownGene,
+    OrgDb = "org.Hs.eg.db",
     dgram_plot = FALSE
 )
 ```
